--- a/chatbot.html
+++ b/chatbot.html
@@ -1,33 +1,81 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Chat Bot</title>
-    </head>
-    <body>
-        <div class="js-container"></div>
+	<head>
+		<title>Chat Bot</title>
+	</head>
+	<body>
+		<div class="js-container"></div>
 
-        <script src="https://unpkg.com/supersimpledev/react.js"></script>
-        <script src="https://unpkg.com/supersimpledev/react-dom.js"></script>
+		<script src="https://unpkg.com/supersimpledev/react.js"></script>
+		<script src="https://unpkg.com/supersimpledev/react-dom.js"></script>
 
-        <script src="https://unpkg.com/supersimpledev/babel.js"></script>
-        <script type="text/babel">
-            function ChatInput(){
-                return (
-                    <>
-                        <input />
-                        <button>Send</button>
-                    </>
-                );
-            }
+		<script src="https://unpkg.com/supersimpledev/babel.js"></script>
+		<script type="text/babel">
+		function ChatInput(){
+			return (
+				<div>
+					<input 
+						placeholder="Send a message to Chatbot" size="30"
+					/>
+					<button>Send</button>
+				</div>
+			);
+		}
 
-            const div = (
-                <>
-                    <ChatInput />
-                </>
-            );
-            
-            const container = document.querySelector('.js-container');
-            ReactDOM.createRoot(container).render(div);
-        </script>
-    </body>
+		function ChatMessage({message,sender}){
+			// const message = props.message;
+			// const sender = props.sender;
+			// const {message,sender} = props;
+			/*
+			if(sender === 'robot'){
+				return(
+					<div>
+						<img src="images/robot.png" width="50" />
+						{message}
+					</div>
+				);
+			}
+		  We cant use if-statments in html therefore (condition && result) is another mehtod for if-statments to use in html 
+			*/
+			return (
+				<div>
+					{sender === 'robot' && (
+						<img src="images/robot.png" width="50" />
+					)} 
+					{message}
+					{sender === 'user' && (
+						<img src="images/user.png" width="50" />
+					)}
+				</div>
+			);
+		}
+
+		function App(){
+			return (
+			<>
+				<ChatInput />
+				<ChatMessage 
+					message="Hello chatbot" 
+					sender="user" 
+				/>
+				<ChatMessage 
+					message="Hello! How can I help you?" 
+					sender="robot" 
+				/>
+				<ChatMessage 
+					message="can you get me todays date?" 
+					sender="user" 
+				/>
+				<ChatMessage 
+					message="Today is January 27" 
+					sender="robot" 
+				/>
+			</>
+			);
+		}
+
+		const container = document.querySelector('.js-container');
+		ReactDOM.createRoot(container).render(<App />);
+		</script>
+	</body>
 </html>
