Made the bot interactive, Used components to generate html for messages, loaded bot library and used it to get response..

--- a/chatbot.html
+++ b/chatbot.html
@@ -8,35 +8,15 @@
 
 		<script src="https://unpkg.com/supersimpledev/react.js"></script>
 		<script src="https://unpkg.com/supersimpledev/react-dom.js"></script>
+		<script src="https://unpkg.com/supersimpledev/chatbot.js"></script>
 
 		<script src="https://unpkg.com/supersimpledev/babel.js"></script>
 		<script type="text/babel">
-		function ChatInput(){
-			return (
-				<div>
-					<input 
-						placeholder="Send a message to Chatbot" size="30"
-					/>
-					<button>Send</button>
-				</div>
-			);
-		}
 
-		function ChatMessage({message,sender}){
+		function ChatMessage({message,sender,id}){
 			// const message = props.message;
 			// const sender = props.sender;
 			// const {message,sender} = props;
-			/*
-			if(sender === 'robot'){
-				return(
-					<div>
-						<img src="images/robot.png" width="50" />
-						{message}
-					</div>
-				);
-			}
-		  We cant use if-statments in html therefore (condition && result) is another mehtod for if-statments to use in html 
-			*/
 			return (
 				<div>
 					{sender === 'robot' && (
@@ -50,25 +30,98 @@
 			);
 		}
 
+		function ChatInput({chatMessages,setChatMessages}){
+			const [inputText, setInputText] = React.useState('');
+
+			function saveToText(event){
+				setInputText(event.target.value);
+			}
+
+			function sendMessage(){
+
+				const newChatMessages = [
+					...chatMessages,{
+						message: inputText,
+						sender: 'user',
+						id: crypto.randomUUID()
+					}
+				];
+
+				setChatMessages(newChatMessages);
+				
+				const botResponse = Chatbot.getResponse(inputText);
+
+				setChatMessages([
+					...newChatMessages,{
+						message: botResponse,
+						sender:'robot',
+						id: crypto.randomUUID()
+					}]
+				);
+				
+				setInputText('');
+			}
+
+			return (
+				<>
+					<input 
+						placeholder="Send a message to Chatbot" 
+						size="30"
+						onChange={saveToText}
+						value={inputText}
+					/>
+					<button
+					onClick={sendMessage}
+					>Send</button>
+				</>
+			);
+		}
+
+		function ChatMessages({chatMessages}){
+			return (				
+				<>
+					{chatMessages.map((chatMessage)=>{
+						return (
+							<ChatMessage 
+								message={chatMessage.message}
+								sender={chatMessage.sender}
+								key={chatMessage.id}
+							/>
+						);	
+					})}
+				</>
+			);
+		}
+
 		function App(){
+			const [chatMessages, setChatMessages] = React.useState([{
+				message:'Hello chatbot',
+				sender:'user',
+				id:'id1'
+			},{
+				message:'Hello! How can I help you?',
+				sender:'robot',
+				id:'id2'
+			},{
+				message:'can you get me todays date?',
+				sender:'user',
+				id:'id3'
+			},{
+				message:'Today is January 27',
+				sender:'robot',
+				id:'id4'
+			}]);
+			// const [chatMessages, setChatMessages] = array;
+			// const chatMessages = array[0];
+			// const setChatMessages = array[1];	
 			return (
 			<>
-				<ChatInput />
-				<ChatMessage 
-					message="Hello chatbot" 
-					sender="user" 
+				<ChatInput 
+					chatMessages={chatMessages}
+					setChatMessages={setChatMessages}
 				/>
-				<ChatMessage 
-					message="Hello! How can I help you?" 
-					sender="robot" 
-				/>
-				<ChatMessage 
-					message="can you get me todays date?" 
-					sender="user" 
-				/>
-				<ChatMessage 
-					message="Today is January 27" 
-					sender="robot" 
+				<ChatMessages 
+					chatMessages={chatMessages}
 				/>
 			</>
 			);
