--- a/chatbot.html
+++ b/chatbot.html
@@ -37,8 +37,7 @@
 				setInputText(event.target.value);
 			}
 
-			function sendMessage(){
-
+			async function sendMessage(){
 				const newChatMessages = [
 					...chatMessages,{
 						message: inputText,
@@ -49,7 +48,7 @@
 
 				setChatMessages(newChatMessages);
 				
-				const botResponse = Chatbot.getResponse(inputText);
+				const botResponse = await Chatbot.getResponseAsync(inputText);
 
 				setChatMessages([
 					...newChatMessages,{
