used React.useRef and React.useEffect to stick the chat to bottom (always scroll to bottom)

--- a/index.html
+++ b/index.html
@@ -105,9 +105,21 @@
 		}
 
 		function ChatMessages({chatMessages}){
+
+			const chatMessagesRef = React.useRef(null);
+
+			React.useEffect(()=>{
+				const containerElem = chatMessagesRef.current;
+				if(containerElem){
+					containerElem.scrollTop = containerElem.scrollHeight;
+				}
+			},[chatMessages]);
 			return (				
 				<>
-					<div className="messages-section">
+					<div 
+						className="messages-section"
+						ref={chatMessagesRef}
+					>
 						{chatMessages.map((chatMessage)=>{
 							return (
 								<ChatMessage 
