created a header and title

--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
 	<head>
 		<title>Chat Bot</title>
 		<link rel="stylesheet" href="/chatbot.css">
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&display=swap" rel="stylesheet">
+
 	</head>
 	<body>
+		<div class="header">
+			<div class="title">
+				Bot-But-Limited
+			</div>
+		</div>
 		<div>
 			<div class="js-container"></div>
 		</div>
